--- a/HRMangement.Web/appsettings.Development.json
+++ b/HRMangement.Web/appsettings.Development.json
@@ -24,8 +24,14 @@
     }
   },
 
-    "ConnectionStrings": {
-      "hrmanage.dev": "Host=localhost; Port=5432; UserName = postgres; Password=12345; Database=hrmanage;"
-    }
+  "ConnectionStrings": {
+    "hrmanage.dev": "Host=localhost; Port=5432; UserName = postgres; Password=richPe+79; Database=hrmanage;"
+  },
+
+  "Jwt": {
+    "Issuer": "http://localhost:5000",
+    "Secret": "veryVerySuperSecretKey",
+    "ExpirationInDays": 30
   }
+}
 
