--- a/hrmanagement.frontend/package.json
+++ b/hrmanagement.frontend/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
     "moment": "^2.29.1",
+    "v-datatable-light": "^0.8.2",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
     "vue-digital-clock": "^2.0.0",
