--- a/hrmanagement.frontend/package.json
+++ b/hrmanagement.frontend/package.json
@@ -22,6 +22,7 @@
     "vue-html-to-paper": "^1.3.1",
     "vue-i18n": "^8.22.4",
     "vue-json-excel": "^0.3.0",
+    "vue-notification": "^1.3.20",
     "vue-picture-input": "^2.1.6",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
