Region District APIs Added

--- a/HRMangement.Web/appsettings.Development.json
+++ b/HRMangement.Web/appsettings.Development.json
@@ -25,7 +25,7 @@
   },
 
   "ConnectionStrings": {
-    "hrmanage.dev": "Host=localhost; Port=5432; UserName = postgres; Password=12345; Database=hrmanage;"
+    "hrmanage.dev": "Host=localhost; Port=5432; UserName = postgres; Password=richPe+79; Database=hrmanage;"
   },
 
   "Jwt": {
